--- a/templates/index.html
+++ b/templates/index.html
@@ -5,21 +5,17 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
             {% for post in posts %}
-            <!-- Post preview-->
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">{{ post.title }}</h2>
-                    <h3 class="post-subtitle">{{ post.subtitle }}</h3>
-                </a>
-                <p class="post-meta">
-                    Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on a date <!-- You might want to add date to your posts -->
-                </p>
-            </div>
-            <!-- Divider-->
-            <hr class="my-4" />
-            {% endfor %}
+<div class="post-preview">
+    <!-- Update the href to use url_for and pass the post's id -->
+    <a href="{{ url_for('post', post_id=post.id) }}">
+        <h2 class="post-title">{{ post.title }}</h2>
+        <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+    </a>
+    <p class="post-meta">Posted by <a href="#!">Start Bootstrap</a> on a date</p>
+</div>
+<hr class="my-4" />
+{% endfor %}
+
             <!-- Pager-->
             <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
         </div>
