--- a/templates/header.html
+++ b/templates/header.html
@@ -40,7 +40,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>Fake Blog</h1>
-                            <span class="subheading">A Fake Blog for 100 Days of Python Bootcamp</span>
+                            <span class="subheading">A Blog for 100 Days of Python Bootcamp</span>
                         </div>
                     </div>
                 </div>
